--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,26 +4,23 @@
     left: calc(50% - 7.21vw);
     width: 11.77vw;
     height: 2.45vw;
-    object-fit: cover;
-}
-
+    object-fit: cover
+    }
 .phstar-icon15 {
     position: relative;
     width: 1.32vw;
     height: 1.32vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .my-go-score15 {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--purple);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .phstar-parent13 {
     position: absolute;
     top: calc(50% - 0.79vw);
@@ -32,33 +29,27 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-base);
-}
-
+    gap: var(--gap-base)
+    }
 .frame-child251 {
     position: absolute;
     top: calc(50% - 1.69vw);
-    left: calc(50% - 8.80vw);
+    left: calc(50% - 8.8vw);
     border-radius: var(--br-9xs);
     width: 17.59vw;
     height: 3.44vw;
-    opacity: 0.1;
-}
-
-.frame-parent366,
-.octiconpeople-2412 {
+    opacity: 0.1
+    }
+.frame-parent366 {
     position: relative;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
-.frame-parent366select,
-.octiconpeople-2412 {
+    flex-shrink: 0
+    }
+.frame-parent366select {
     position: relative;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .frame-parent366 {
     cursor: pointer;
     border: 0;
@@ -66,9 +57,8 @@
     background-color: transparent;
     border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
     width: 19.18vw;
-    height: 4.03vw;
-}
-
+    height: 4.03vw
+    }
 .frame-parent366select {
     cursor: pointer;
     border: 0;
@@ -76,22 +66,15 @@
     background-color: #efefff;
     border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
     width: 19.18vw;
-    height: 4.03vw;
-}
-
-.octiconpeople-2412 {
-    width: 1.36vw;
-    height: 1.36vw;
-}
-
+    height: 4.03vw
+    }
 .interviews16 {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--icon-grey);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .frame-parent365 {
     position: absolute;
     top: 8.53vw;
@@ -99,9 +82,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-wrapper225 {
     cursor: pointer;
     border: 0;
@@ -113,17 +95,15 @@
     border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
     width: 19.18vw;
     height: 4.03vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .lauser-friends-icon {
     position: relative;
     width: 2.12vw;
     height: 2.12vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .refer-and-earn {
     position: relative;
     font-size: var(--font-size-base);
@@ -132,9 +112,8 @@
     font-family: var(--font-avenir-lt-std);
     color: var(--color-darkslategray-100);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .refer-and-earn1 {
     position: relative;
     font-size: var(--font-size-base);
@@ -142,22 +121,17 @@
     line-height: 1.59vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--color-darkslategray-100);
-    text-align: left;
-}
-
-.frame-wrapper226,
-.lauser-friends-parent,
-.refer-and-earn-parent {
+    text-align: left
+    }
+.frame-wrapper226, .lauser-friends-parent, .refer-and-earn-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .lauser-friends-parent {
-    gap: var(--gap-3xs);
-}
-
+    gap: var(--gap-3xs)
+    }
 .frame-wrapper226 {
     cursor: pointer;
     border: 0;
@@ -166,43 +140,37 @@
     border-radius: var(--br-xs);
     width: 14.68vw;
     overflow: hidden;
-    box-sizing: border-box;
-}
-
+    box-sizing: border-box
+    }
 .illustration-child13 {
     position: absolute;
     top: 0;
     left: 0;
     width: 14.68vw;
-    height: 10.65vw;
-}
-
+    height: 10.65vw
+    }
 .upgrade-to-pro16 {
     position: relative;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .get-exclusive-dashboard15 {
     position: relative;
-    font-size: var(--font-size-sm);
-}
-
+    font-size: var(--font-size-sm)
+    }
 .upgrade-to-pro-parent13 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-5xs);
-}
-
+    gap: var(--gap-5xs)
+    }
 .upgrade-now15 {
     position: relative;
     font-size: 1.05vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .upgrade-now-wrapper13 {
     cursor: pointer;
     border: 0;
@@ -213,9 +181,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-}
-
+    justify-content: center
+    }
 .frame-parent368 {
     position: absolute;
     top: calc(50% - 3.67vw);
@@ -224,15 +191,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-lgi);
-}
-
+    gap: var(--gap-lgi)
+    }
 .illustration15 {
     position: relative;
     width: 14.68vw;
-    height: 10.52vw;
-}
-
+    height: 10.52vw
+    }
 .frame-parent367 {
     position: absolute;
     top: 35.12vw;
@@ -241,9 +206,8 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-xl);
-}
-
+    gap: var(--gap-xl)
+    }
 .cantileverlogoblack-2-parent19 {
     position: absolute;
     top: 0;
@@ -255,5 +219,5 @@
     text-align: left;
     font-size: var(--font-size-xl);
     color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
