--- a/src/pages/ScheduleIteration1.css
+++ b/src/pages/ScheduleIteration1.css
@@ -2,9 +2,8 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .schedule-wrapper {
     position: absolute;
     top: 1.59vw;
@@ -12,24 +11,21 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-child61 {
     position: relative;
     width: 1.85vw;
-    height: 1.85vw;
-}
-
+    height: 1.85vw
+    }
 .group-parent {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 16.20vw;
-    z-index: 0;
-}
-
+    gap: 16.2vw;
+    z-index: 0
+    }
 .frame-child64 {
     position: absolute;
     margin: 0 !important;
@@ -40,16 +36,13 @@
     width: 15.28vw;
     height: 0.07vw;
     opacity: 0.5;
-    z-index: 0;
-}
-
-.frame-child65,
-.line-parent5 {
+    z-index: 0
+    }
+.frame-child65, .line-parent5 {
     margin: 0 !important;
     position: absolute;
-    z-index: 1;
-}
-
+    z-index: 1
+    }
 .frame-child65 {
     top: -0.03vw;
     left: 18.29vw;
@@ -57,9 +50,8 @@
     box-sizing: border-box;
     width: 15.28vw;
     height: 0.07vw;
-    opacity: 0.5;
-}
-
+    opacity: 0.5
+    }
 .line-parent5 {
     top: 0.93vw;
     left: 2.12vw;
@@ -68,76 +60,62 @@
     align-items: flex-start;
     justify-content: flex-start;
     padding: var(--padding-3xs);
-    gap: var(--gap-3xs);
-}
-
-.frame-child66,
-.frame-parent95 {
+    gap: var(--gap-3xs)
+    }
+.frame-child66, .frame-parent95 {
     transform: rotate(90deg);
-    transform-origin: 0 0;
-}
-
+    transform-origin: 0 0
+    }
 .frame-parent95 {
     position: absolute;
-    top: 0.40vw;
+    top: 0.4vw;
     left: 1.85vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-3xs);
-}
-
+    gap: var(--gap-3xs)
+    }
 .frame-child66 {
     position: relative;
     border-radius: 50%;
     background-color: var(--incomplete);
-    width: 0.40vw;
-    height: 0.40vw;
-}
-
-.ellipse-container,
-.ellipse-group {
+    width: 0.4vw;
+    height: 0.4vw
+    }
+.ellipse-container, .ellipse-group {
     position: absolute;
     flex-direction: column;
     justify-content: flex-start;
-    gap: var(--gap-32xl);
-}
-
+    gap: var(--gap-32xl)
+    }
 .ellipse-group {
-    top: 4.70vw;
+    top: 4.7vw;
     left: 0.79vw;
     display: flex;
-    align-items: flex-start;
-}
-
+    align-items: flex-start
+    }
 .ellipse-container {
     top: 22.49vw;
-    left: 0.73vw;
-}
-
-.ellipse-container,
-.tests-parent,
-.tue-parent {
+    left: 0.73vw
+    }
+.ellipse-container, .tests-parent, .tue-parent {
     display: flex;
-    align-items: flex-start;
-}
-
+    align-items: flex-start
+    }
 .tests-parent {
     position: absolute;
     top: 0;
     left: 2.78vw;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 15.34vw;
-}
-
+    gap: 15.34vw
+    }
 .tue-parent {
     flex-direction: row;
     justify-content: center;
-    gap: var(--gap-9xs);
-}
-
+    gap: var(--gap-9xs)
+    }
 .test-2-wrapper {
     position: relative;
     border-radius: var(--br-3xs);
@@ -146,24 +124,20 @@
     height: 2.58vw;
     overflow: hidden;
     flex-shrink: 0;
-    color: var(--white);
-}
-
-.frame-parent97,
-.frame-parent98 {
+    color: var(--white)
+    }
+.frame-parent97, .frame-parent98 {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-9xl);
-}
-
+    gap: var(--gap-9xl)
+    }
 .frame-parent97 {
     flex-direction: column;
     align-items: flex-start;
-    gap: var(--gap-base);
-}
-
+    gap: var(--gap-base)
+    }
 .view-more2 {
     position: relative;
     font-size: var(--font-size-sm);
@@ -171,17 +145,15 @@
     line-height: 2.78vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--icon-grey);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .riarrow-drop-down-line-icon2 {
     position: relative;
     width: 1.32vw;
     height: 1.32vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .view-more-container {
     cursor: pointer;
     border: 0;
@@ -192,11 +164,9 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: var(--gap-9xs);
-}
-
-.frame-parent101,
-.frame-parent96 {
+    gap: var(--gap-9xs)
+    }
+.frame-parent101, .frame-parent96 {
     position: absolute;
     top: 3.44vw;
     left: 2.78vw;
@@ -204,22 +174,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-base);
-}
-
+    gap: var(--gap-base)
+    }
 .frame-parent101 {
-    top: 21.30vw;
-    left: 2.84vw;
-}
-
+    top: 21.3vw;
+    left: 2.84vw
+    }
 .amazons-interview {
     position: absolute;
     top: calc(50% - 1.32vw);
     left: 1.72vw;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .amazons-interview-wrapper {
     position: relative;
     border-radius: var(--br-3xs);
@@ -228,9 +195,8 @@
     height: 2.58vw;
     overflow: hidden;
     flex-shrink: 0;
-    color: var(--white);
-}
-
+    color: var(--white)
+    }
 .frame-parent106 {
     position: absolute;
     top: 40.34vw;
@@ -239,9 +205,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-9xl);
-}
-
+    gap: var(--gap-9xl)
+    }
 .frame-parent94 {
     position: absolute;
     top: 6.28vw;
@@ -249,9 +214,8 @@
     width: 32.94vw;
     height: 43.12vw;
     font-size: var(--font-size-xl);
-    color: var(--color-gray-200);
-}
-
+    color: var(--color-gray-200)
+    }
 .frame-parent93 {
     position: absolute;
     top: 9.39vw;
@@ -259,13 +223,11 @@
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 39.75vw;
-    height: 53.70vw;
-}
-
+    height: 53.7vw
+    }
 .days-remaining-5 {
-    position: relative;
-}
-
+    position: relative
+    }
 .days-remaining-5-wrapper {
     border-radius: var(--br-5xs);
     background-color: var(--color-crimson-100);
@@ -274,32 +236,29 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: var(--padding-base) var(--padding-xl);
-}
-
+    padding: var(--padding-base) var(--padding-xl)
+    }
 .schedule-iteration-1-inner {
     position: absolute;
     top: 10.58vw;
     left: 48.21vw;
     border-radius: var(--br-xs);
-    border: 0.10vw solid #e94664;
+    border: 0.1vw solid #e94664;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
     font-size: var(--font-size-base);
-    color: var(--danger);
-}
-
+    color: var(--danger)
+    }
 .tips {
     position: absolute;
     top: 1.32vw;
     left: 1.32vw;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .they-were-able1 {
     position: relative;
     font-size: var(--font-size-base);
@@ -307,74 +266,59 @@
     line-height: 1.59vw;
     color: var(--icon-grey);
     display: inline-block;
-    width: 30.22vw;
-}
-
+    width: 30.22vw
+    }
 .mentor-remarks-parent {
     width: 30.03vw;
-    height: 9.66vw;
-}
-
-.frame-wrapper48,
-.mentor-remarks-parent,
-.technical-proficiency-group {
+    height: 9.66vw
+    }
+.frame-wrapper48, .mentor-remarks-parent, .technical-proficiency-group {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-wrapper48 {
     border-radius: var(--br-xs);
     background-color: var(--color-ghostwhite-200);
     width: 32.28vw;
     overflow: hidden;
     padding: var(--padding-xl) var(--padding-sm);
-    box-sizing: border-box;
-}
-
+    box-sizing: border-box
+    }
 .technical-proficiency-group {
     width: 30.03vw;
-    height: 7.54vw;
-}
-
-.company-logo-icon13,
-.company-logo-icon14 {
+    height: 7.54vw
+    }
+.company-logo-icon13, .company-logo-icon14 {
     position: relative;
     width: 4.96vw;
     height: 1.92vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .company-logo-icon14 {
     width: 7.47vw;
-    height: 2.12vw;
-}
-
+    height: 2.12vw
+    }
 .company-logo-parent10 {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-13xl);
-}
-
+    gap: var(--gap-13xl)
+    }
 .companies-with-similar-benchma-parent {
     width: 29.76vw;
     height: 6.15vw;
-    gap: var(--gap-xs);
-}
-
-.companies-with-similar-benchma-parent,
-.frame-parent107,
-.frame-wrapper51 {
+    gap: var(--gap-xs)
+    }
+.companies-with-similar-benchma-parent, .frame-parent107, .frame-wrapper51 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-wrapper51 {
     border-radius: var(--br-base);
     background-color: var(--color-ghostwhite-200);
@@ -383,17 +327,15 @@
     overflow: hidden;
     flex-shrink: 0;
     padding: var(--padding-base) 1.39vw;
-    box-sizing: border-box;
-}
-
+    box-sizing: border-box
+    }
 .frame-parent107 {
     position: absolute;
     top: 4.89vw;
     left: 1.32vw;
     gap: var(--gap-base);
-    font-size: var(--font-size-xl);
-}
-
+    font-size: var(--font-size-xl)
+    }
 .tips-parent {
     position: absolute;
     top: 9.46vw;
@@ -404,9 +346,8 @@
     height: 53.64vw;
     overflow: hidden;
     font-size: var(--font-size-5xl);
-    color: var(--color-darkslategray-200);
-}
-
+    color: var(--color-darkslategray-200)
+    }
 .schedule-iteration-1 {
     position: relative;
     background-color: var(--color-ghostwhite-100);
@@ -416,5 +357,5 @@
     text-align: left;
     font-size: var(--font-size-9xl);
     color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
