--- a/src/components/AddDreamCompanyPopup.css
+++ b/src/components/AddDreamCompanyPopup.css
@@ -5,33 +5,28 @@
     width: 2.12vw;
     height: 2.12vw;
     overflow: hidden;
-    cursor: pointer;
-}
-
+    cursor: pointer
+    }
 .add-your-dream {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .fill-in-the2 {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
     font-size: var(--font-size-lg);
     color: var(--icon-grey);
-    margin-top: -0.53vw;
-}
-
-.add-your-dream-company-parent,
-.frame-child170 {
+    margin-top: -0.53vw
+    }
+.add-your-dream-company-parent, .frame-child170 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-child170 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
@@ -42,22 +37,18 @@
     width: 20.11vw;
     flex-direction: row;
     align-items: center;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
-.dream-company-container,
-.frame-parent228 {
+    padding: var(--padding-base) var(--padding-5xl)
+    }
+.dream-company-container, .frame-parent228 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-xs);
-}
-
+    gap: var(--gap-xs)
+    }
 .frame-parent228 {
-    flex-direction: row;
-}
-
+    flex-direction: row
+    }
 .frame-child172 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
@@ -70,39 +61,32 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .preparation-status {
-    position: relative;
-}
-
-.frame-parent226,
-.frame-parent227 {
+    position: relative
+    }
+.frame-parent226, .frame-parent227 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent227 {
     gap: var(--gap-17xl);
-    font-size: var(--font-size-lg);
-}
-
+    font-size: var(--font-size-lg)
+    }
 .frame-parent226 {
-    gap: var(--gap-5xl);
-}
-
+    gap: var(--gap-5xl)
+    }
 .pay-for-company {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .pay-for-company-wrapper {
     border-radius: var(--br-5xs);
     background-color: var(--purple);
@@ -112,32 +96,27 @@
     align-items: center;
     justify-content: center;
     padding: var(--padding-base) var(--padding-xl);
-    cursor: pointer;
-}
-
-.frame-parent225,
-.frame-wrapper89 {
+    cursor: pointer
+    }
+.frame-parent225, .frame-wrapper89 {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-wrapper89 {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent;
-    flex-direction: row;
-}
-
+    flex-direction: row
+    }
 .frame-parent225 {
     position: absolute;
     top: 2.38vw;
-    left: calc(50% - 20.50vw);
+    left: calc(50% - 20.5vw);
     flex-direction: column;
-    gap: var(--gap-29xl);
-}
-
+    gap: var(--gap-29xl)
+    }
 .adddreamcompanypopup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -153,5 +132,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
