--- a/src/components/AddStudents2Popup.css
+++ b/src/components/AddStudents2Popup.css
@@ -1,80 +1,65 @@
-.add-students,
-.upload-list-of {
+.add-students, .upload-list-of {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .upload-list-of {
     font-size: var(--font-size-lg);
     color: var(--icon-grey);
-    margin-top: -0.53vw;
-}
-
+    margin-top: -0.53vw
+    }
 .add-students-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .phfile-csv-duotone-icon {
     position: relative;
     width: 1.32vw;
     height: 1.26vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .studentcsv {
     position: relative;
-    text-decoration: underline;
-}
-
+    text-decoration: underline
+    }
 .studentcsv-wrapper {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .vector-icon2 {
     position: relative;
     width: 1.32vw;
-    height: 1.32vw;
-}
-
-.frame-parent21,
-.phfile-csv-duotone-parent {
+    height: 1.32vw
+    }
+.frame-parent21, .phfile-csv-duotone-parent {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: var(--gap-5xs);
-}
-
+    gap: var(--gap-5xs)
+    }
 .phfile-csv-duotone-parent {
-    gap: var(--gap-9xs);
-}
-
+    gap: var(--gap-9xs)
+    }
 .students-detected {
     position: relative;
     font-size: var(--font-size-sm);
-    color: var(--color-dimgray-100);
-}
-
-.frame-parent20,
-.frame-wrapper12 {
+    color: var(--color-dimgray-100)
+    }
+.frame-parent20, .frame-wrapper12 {
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-
+    justify-content: center
+    }
 .frame-parent20 {
     flex-direction: column;
-    gap: var(--gap-base);
-}
-
+    gap: var(--gap-base)
+    }
 .frame-wrapper12 {
     border-radius: var(--br-xs);
     border: 0.07vw dashed var(--color-dimgray-100);
@@ -82,33 +67,27 @@
     width: 41.01vw;
     height: 7.67vw;
     flex-direction: row;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
-.frame-wrapper10,
-.frame-wrapper11 {
+    padding: var(--padding-base) var(--padding-5xl)
+    }
+.frame-wrapper10, .frame-wrapper11 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-}
-
+    align-items: center
+    }
 .frame-wrapper11 {
     width: 41.01vw;
-    justify-content: center;
-}
-
+    justify-content: center
+    }
 .frame-wrapper10 {
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .pay-for1200-students {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .pay-for1200-students-wrapper {
     cursor: pointer;
     border: 0;
@@ -121,33 +100,26 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
-}
-
+    box-sizing: border-box
+    }
 .frame-parent19 {
     gap: var(--gap-xl);
-    font-size: var(--font-size-xl);
-}
-
-.addstudents2popup-inner,
-.frame-parent18,
-.frame-parent19 {
+    font-size: var(--font-size-xl)
+    }
+.addstudents2popup-inner, .frame-parent18, .frame-parent19 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent18 {
-    gap: var(--gap-lg);
-}
-
+    gap: var(--gap-lg)
+    }
 .addstudents2popup-inner {
     position: absolute;
     top: 2.25vw;
-    left: calc(50% - 20.50vw);
-}
-
+    left: calc(50% - 20.5vw)
+    }
 .vector-icon3 {
     position: absolute;
     height: 34%;
@@ -158,9 +130,8 @@
     left: 33%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .basilcross-outline2 {
     cursor: pointer;
     border: 0;
@@ -171,9 +142,8 @@
     left: 40.34vw;
     width: 2.12vw;
     height: 2.12vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .addstudents2popup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -189,5 +159,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
