--- a/src/components/AdminSettingsPane.css
+++ b/src/components/AdminSettingsPane.css
@@ -5,5 +5,5 @@
     background-color: var(--white);
     box-shadow: 0.07vw 0 0.26vw rgba(0, 0, 0, 0.15);
     width: 17.33vw;
-    height: 48.68vw;
-}
+    height: 48.68vw
+    }
