--- a/src/components/LogoutPopup.css
+++ b/src/components/LogoutPopup.css
@@ -8,9 +8,8 @@
     left: 32.99%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .basilcross-outline {
     cursor: pointer;
     border: 0;
@@ -21,31 +20,27 @@
     left: 28.04vw;
     width: 2.12vw;
     height: 2.12vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .are-you-sure {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .are-you-sure-wrapper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .log-out {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .log-out-wrapper {
     border-radius: var(--br-5xs);
     background-color: var(--purple);
@@ -57,9 +52,8 @@
     align-items: center;
     justify-content: center;
     padding: var(--padding-base) var(--padding-xl);
-    box-sizing: border-box;
-}
-
+    box-sizing: border-box
+    }
 .frame-button {
     cursor: pointer;
     border: 0;
@@ -68,18 +62,16 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .cancel {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--purple);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .cancel-wrapper {
     cursor: pointer;
     border: 0.07vw solid var(--purple);
@@ -93,25 +85,21 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-}
-
-.frame-parent1,
-.frame-parent2 {
+    justify-content: center
+    }
+.frame-parent1, .frame-parent2 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-13xl);
-}
-
+    gap: var(--gap-13xl)
+    }
 .frame-parent1 {
     position: absolute;
-    top: calc(50% - 4.30vw);
+    top: calc(50% - 4.3vw);
     left: calc(50% - 12.83vw);
-    flex-direction: column;
-}
-
+    flex-direction: column
+    }
 .logoutpopup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -128,5 +116,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
