--- a/src/components/ScheduleTestPopup.css
+++ b/src/components/ScheduleTestPopup.css
@@ -1,28 +1,21 @@
-.add-new-test,
-.fill-in-the {
+.add-new-test, .fill-in-the {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .fill-in-the {
     font-size: var(--font-size-lg);
     color: var(--icon-grey);
-    margin-top: -0.53vw;
-}
-
+    margin-top: -0.53vw
+    }
 .add-new-test-parent {
     flex-direction: column;
-    align-items: flex-start;
-}
-
-.add-new-test-parent,
-.company-group,
-.frame-child4 {
+    align-items: flex-start
+    }
+.add-new-test-parent, .company-group, .frame-child4 {
     display: flex;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-child4 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
@@ -33,39 +26,31 @@
     width: 20.11vw;
     flex-direction: row;
     align-items: center;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .company-group {
     flex-direction: column;
     align-items: flex-start;
-    gap: var(--gap-xs);
-}
-
+    gap: var(--gap-xs)
+    }
 .level {
-    position: relative;
-}
-
+    position: relative
+    }
 .frame-parent32 {
     flex-direction: row;
     align-items: flex-start;
-    gap: var(--gap-xs);
-}
-
-.frame-child8,
-.frame-parent31,
-.frame-parent32 {
+    gap: var(--gap-xs)
+    }
+.frame-child8, .frame-parent31, .frame-parent32 {
     display: flex;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent31 {
     flex-direction: column;
     align-items: flex-start;
     gap: var(--gap-17xl);
-    font-size: var(--font-size-lg);
-}
-
+    font-size: var(--font-size-lg)
+    }
 .frame-child8 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
@@ -76,25 +61,22 @@
     width: 41.07vw;
     flex-direction: row;
     align-items: center;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .enter-topic-tags-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-5xs);
-}
-
+    gap: var(--gap-5xs)
+    }
 .machine-learning3 {
     position: relative;
     display: inline-block;
     width: 7.21vw;
     height: 0.99vw;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .vector-icon8 {
     position: absolute;
     height: 54.76%;
@@ -105,9 +87,8 @@
     left: 22.62%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .system-uiconscross {
     cursor: pointer;
     border: 0;
@@ -117,9 +98,8 @@
     width: 0.93vw;
     height: 0.93vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .machine-learning-parent {
     border-radius: var(--br-5xl);
     border: 0.07vw solid var(--purple);
@@ -129,46 +109,36 @@
     align-items: flex-end;
     justify-content: center;
     padding: var(--padding-6xs) var(--padding-2xs);
-    gap: var(--gap-11xs);
-}
-
-.frame-parent30,
-.frame-parent34,
-.frame-parent35 {
+    gap: var(--gap-11xs)
+    }
+.frame-parent30, .frame-parent34, .frame-parent35 {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent35 {
     flex-direction: row;
     gap: var(--gap-xs);
     font-size: var(--font-size-sm);
-    color: var(--purple);
-}
-
-.frame-parent30,
-.frame-parent34 {
-    flex-direction: column;
-}
-
+    color: var(--purple)
+    }
+.frame-parent30, .frame-parent34 {
+    flex-direction: column
+    }
 .frame-parent34 {
     gap: var(--gap-base);
-    font-size: var(--font-size-xl);
-}
-
+    font-size: var(--font-size-xl)
+    }
 .frame-parent30 {
-    gap: var(--gap-5xl);
-}
-
+    gap: var(--gap-5xl)
+    }
 .add-test {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .add-test-wrapper {
     border-radius: var(--br-5xs);
     background-color: var(--purple);
@@ -178,32 +148,27 @@
     align-items: center;
     justify-content: center;
     padding: var(--padding-base) var(--padding-xl);
-    cursor: pointer;
-}
-
-.frame-parent29,
-.frame-wrapper22 {
+    cursor: pointer
+    }
+.frame-parent29, .frame-wrapper22 {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-wrapper22 {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent;
-    flex-direction: row;
-}
-
+    flex-direction: row
+    }
 .frame-parent29 {
     position: absolute;
     top: calc(50% - 18.75vw);
     left: calc(50% - 20.54vw);
     flex-direction: column;
-    gap: 2.91vw;
-}
-
+    gap: 2.91vw
+    }
 .vector-icon10 {
     position: absolute;
     height: 34.01%;
@@ -214,9 +179,8 @@
     left: 32.99%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .basilcross-outline6 {
     cursor: pointer;
     border: 0;
@@ -227,9 +191,8 @@
     left: 40.34vw;
     width: 2.12vw;
     height: 2.12vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .scheduletestpopup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -245,5 +208,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
