--- a/src/components/ScheduledSuccessfullyPopup.css
+++ b/src/components/ScheduledSuccessfullyPopup.css
@@ -1,40 +1,33 @@
 .vector-icon35 {
     width: 5.95vw;
     height: 5.95vw;
-    position: relative;
-}
-
+    position: relative
+    }
 .interview-scheduled-succesfull {
     position: relative;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .interview-scheduled-succesfull-wrapper {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .sit-back-and {
     position: relative;
-    font-size: var(--font-size-5xl);
-}
-
-.frame-parent233,
-.vector-parent6 {
+    font-size: var(--font-size-5xl)
+    }
+.frame-parent233, .vector-parent6 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-9xs);
-}
-
+    gap: var(--gap-9xs)
+    }
 .vector-parent6 {
     position: absolute;
-    gap: var(--gap-5xl);
-}
-
+    gap: var(--gap-5xl)
+    }
 .scheduledsuccessfullypopup-inner {
     position: absolute;
     top: 50%;
@@ -42,9 +35,8 @@
     width: 31.68vw;
     height: 12.24vw;
     font-size: 1.56vw;
-    transform: translate(-50%,-50%);
-}
-
+    transform: translate(-50%, -50%)
+    }
 .vector-icon36 {
     position: absolute;
     height: 32.69%;
@@ -55,9 +47,8 @@
     left: 33.65%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .basilcross-outline13 {
     cursor: pointer;
     border: 0;
@@ -68,9 +59,8 @@
     left: 30.82vw;
     width: 2.98vw;
     height: 2.98vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .scheduledsuccessfullypopup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -86,5 +76,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
