--- a/src/components/StudentsAddedSuccessfullyPopup.css
+++ b/src/components/StudentsAddedSuccessfullyPopup.css
@@ -1,49 +1,40 @@
 .vector-icon4 {
     width: 5.95vw;
-    height: 5.95vw;
-}
-
-.students-added-succesfully,
-.vector-icon4 {
-    position: relative;
-}
-
+    height: 5.95vw
+    }
+.students-added-succesfully, .vector-icon4 {
+    position: relative
+    }
 .students-added-succesfully-wrapper {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .monitor-their-progress {
     position: relative;
-    font-size: var(--font-size-5xl);
-}
-
-.frame-parent22,
-.vector-parent {
+    font-size: var(--font-size-5xl)
+    }
+.frame-parent22, .vector-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-9xs);
-}
-
+    gap: var(--gap-9xs)
+    }
 .vector-parent {
     position: absolute;
     top: 0;
     left: 0;
-    gap: var(--gap-5xl);
-}
-
+    gap: var(--gap-5xl)
+    }
 .studentsaddedsuccessfullypopup-inner {
     position: absolute;
     top: 3.37vw;
     left: calc(50% - 15.71vw);
     width: 31.68vw;
-    height: 12.24vw;
-}
-
+    height: 12.24vw
+    }
 .vector-icon5 {
     position: absolute;
     height: 32.69%;
@@ -54,9 +45,8 @@
     left: 33.65%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .basilcross-outline3 {
     cursor: pointer;
     border: 0;
@@ -67,9 +57,8 @@
     left: 30.82vw;
     width: 2.98vw;
     height: 2.98vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .studentsaddedsuccessfullypopup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -85,5 +74,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
