--- a/src/components/TestRemarksPopUp.css
+++ b/src/components/TestRemarksPopUp.css
@@ -1,35 +1,28 @@
-.kindly-give-remarks,
-.remarks {
+.kindly-give-remarks, .remarks {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .kindly-give-remarks {
     font-size: var(--font-size-lg);
     color: var(--icon-grey);
-    margin-top: -0.53vw;
-}
-
+    margin-top: -0.53vw
+    }
 .remarks-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    font-size: var(--font-size-5xl);
-}
-
+    font-size: var(--font-size-5xl)
+    }
 .overall-impression {
-    position: relative;
-}
-
-.frame-textarea,
-.overall-impression-parent {
+    position: relative
+    }
+.frame-textarea, .overall-impression-parent {
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-textarea {
     border: 0.07vw solid var(--color-gainsboro-400);
     background-color: transparent;
@@ -40,40 +33,31 @@
     width: 41.01vw;
     height: 5.75vw;
     flex-direction: row;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .overall-impression-parent {
     flex-direction: column;
-    gap: var(--gap-xs);
-}
-
-.frame-parent50,
-.frame-wrapper23,
-.frame-wrapper24 {
+    gap: var(--gap-xs)
+    }
+.frame-parent50, .frame-wrapper23, .frame-wrapper24 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
-.frame-parent50,
-.frame-wrapper23 {
-    flex-direction: column;
-}
-
+    justify-content: flex-start
+    }
+.frame-parent50, .frame-wrapper23 {
+    flex-direction: column
+    }
 .frame-parent50 {
-    gap: var(--gap-5xl);
-}
-
+    gap: var(--gap-5xl)
+    }
 .submit-remarks {
     position: relative;
     font-size: var(--font-size-xl);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .submit-remarks-wrapper {
     cursor: pointer;
     border: 0;
@@ -84,20 +68,18 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-}
-
+    justify-content: center
+    }
 .frame-parent49 {
     position: absolute;
     top: 2.38vw;
-    left: calc(50% - 20.50vw);
+    left: calc(50% - 20.5vw);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-21xl);
-}
-
+    gap: var(--gap-21xl)
+    }
 .vector-icon15 {
     position: absolute;
     height: 34%;
@@ -108,9 +90,8 @@
     left: 32.99%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .basilcross-outline7 {
     cursor: pointer;
     border: 0;
@@ -121,9 +102,8 @@
     left: 40.34vw;
     width: 2.12vw;
     height: 2.12vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .testremarkspopup {
     border-radius: var(--br-base);
     background-color: var(--white);
@@ -139,5 +119,5 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-}
+    transform: translate(-50%, -50%)
+    }
