--- a/src/pages/AdminTest.css
+++ b/src/pages/AdminTest.css
@@ -1,9 +1,8 @@
 .active-tests {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .active-tests-wrapper {
     position: absolute;
     top: 1.59vw;
@@ -11,9 +10,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .vector-icon11 {
     position: absolute;
     height: 1.44%;
@@ -24,42 +22,35 @@
     left: 86.56%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .company-logo-icon {
     position: absolute;
     top: 3.97vw;
-    left: calc(50% - 3.90vw);
-    width: 7.80vw;
+    left: calc(50% - 3.9vw);
+    width: 7.8vw;
     height: 3.44vw;
-    overflow: hidden;
-}
-
-.frame-icon,
-.vector-group {
+    overflow: hidden
+    }
+.frame-icon, .vector-group {
     position: relative;
     border-radius: var(--br-base);
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .vector-group {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: var(--white);
-    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.10vw 0 rgba(0, 0, 0, 0.1),
-    0 0.20vw 0#605bff;
+    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.1vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
     width: 23.02vw;
-    height: 12.04vw;
-}
-
+    height: 12.04vw
+    }
 .frame-icon {
     width: 23.28vw;
-    height: 12.37vw;
-}
-
+    height: 12.37vw
+    }
 .frame-parent37 {
     position: absolute;
     top: 6.08vw;
@@ -70,25 +61,22 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-13xl);
-}
-
+    gap: var(--gap-13xl)
+    }
 .icbaseline-plus-icon1 {
     position: relative;
     width: 1.32vw;
     height: 1.32vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .add-new-test1 {
     position: relative;
     font-size: 1.05vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .icbaseline-plus-group {
     cursor: pointer;
     border: 0;
@@ -103,9 +91,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: var(--gap-7xs);
-}
-
+    gap: var(--gap-7xs)
+    }
 .frame-parent36 {
     position: absolute;
     top: 9.13vw;
@@ -113,9 +100,8 @@
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 76.59vw;
-    height: 53.70vw;
-}
-
+    height: 53.7vw
+    }
 .admintest {
     position: relative;
     background-color: var(--color-ghostwhite-100);
@@ -125,5 +111,5 @@
     text-align: left;
     font-size: var(--font-size-9xl);
     color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
