--- a/src/pages/DashboardInterviewer2.css
+++ b/src/pages/DashboardInterviewer2.css
@@ -1,9 +1,8 @@
 .scheduled-interviews {
     position: relative;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
+    line-height: 2.78vw
+    }
 .scheduled-interviews-wrapper {
     position: absolute;
     top: 1.32vw;
@@ -11,15 +10,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
-.mdicard-outline,
-.vector-icon14 {
+    justify-content: flex-start
+    }
+.mdicard-outline, .vector-icon14 {
     position: absolute;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .vector-icon14 {
     height: 66.67%;
     width: 83.33%;
@@ -28,9 +24,8 @@
     bottom: 16.67%;
     left: 8.33%;
     max-width: 100%;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .mdicard-outline {
     cursor: pointer;
     border: 0;
@@ -39,159 +34,116 @@
     top: 2.12vw;
     left: 72.88vw;
     width: 1.59vw;
-    height: 1.59vw;
-}
-
-.frame-child27,
-.frame-child28,
-.frame-child29,
-.frame-child30,
-.frame-child31 {
+    height: 1.59vw
+    }
+.frame-child27, .frame-child28, .frame-child29, .frame-child30, .frame-child31 {
     position: absolute;
-    top: -0.10vw;
-    left: 12.60vw;
+    top: -0.1vw;
+    left: 12.6vw;
     border-right: 0.07vw solid var(--color-gainsboro-400);
     box-sizing: border-box;
     width: 0.07vw;
-    height: 41.01vw;
-}
-
-.frame-child28,
-.frame-child29,
-.frame-child30,
+    height: 41.01vw
+    }
+.frame-child28, .frame-child29, .frame-child30, .frame-child31 {
+    left: 24.44vw
+    }
+.frame-child29, .frame-child30, .frame-child31 {
+    left: 36.28vw
+    }
+.frame-child30, .frame-child31 {
+    left: 48.12vw
+    }
 .frame-child31 {
-    left: 24.44vw;
-}
-
-.frame-child29,
-.frame-child30,
-.frame-child31 {
-    left: 36.28vw;
-}
-
-.frame-child30,
-.frame-child31 {
-    left: 48.12vw;
-}
-
-.frame-child31 {
-    left: 59.95vw;
-}
-
-.frame-child32,
-.frame-child33,
-.frame-child34 {
+    left: 59.95vw
+    }
+.frame-child32, .frame-child33, .frame-child34 {
     position: absolute;
     top: 9.82vw;
     left: -0.03vw;
     border-top: 0.07vw solid var(--color-gainsboro-400);
     box-sizing: border-box;
     width: 72.69vw;
-    height: 0.07vw;
-}
-
-.frame-child33,
+    height: 0.07vw
+    }
+.frame-child33, .frame-child34 {
+    top: 20.6vw
+    }
 .frame-child34 {
-    top: 20.60vw;
-}
-
-.frame-child34 {
-    top: 31.38vw;
-}
-
+    top: 31.38vw
+    }
 .aug {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    color: var(--icon-grey);
-}
-
-.aug-parent,
-.sept-container,
-.sept-group,
-.sept-parent {
+    color: var(--icon-grey)
+    }
+.aug-parent, .sept-container, .sept-group, .sept-parent {
     position: absolute;
     left: 1.46vw;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .aug-parent {
     top: 1.46vw;
-    gap: 7.21vw;
-}
-
-.sept-container,
-.sept-group,
-.sept-parent {
+    gap: 7.21vw
+    }
+.sept-container, .sept-group, .sept-parent {
     top: 11.04vw;
-    gap: var(--gap-93xl);
-}
-
-.sept-container,
-.sept-group {
-    top: 22.16vw;
-}
-
+    gap: var(--gap-93xl)
+    }
+.sept-container, .sept-group {
+    top: 22.16vw
+    }
 .sept-container {
-    top: 33.66vw;
-}
-
+    top: 33.66vw
+    }
 .pm-100-pm {
     position: absolute;
-    top: 0.60vw;
+    top: 0.6vw;
     left: 0.53vw;
     letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
-.pm-100-pm-wrapper,
-.pm-600-pm-wrapper {
+    line-height: 2.78vw
+    }
+.pm-100-pm-wrapper, .pm-600-pm-wrapper {
     position: relative;
     border-radius: var(--br-8xs);
     background-color: var(--incomplete);
     width: 9.33vw;
     height: 1.65vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .pm-600-pm-wrapper {
-    background-color: var(--yellow);
-}
-
+    background-color: var(--yellow)
+    }
 .frame-parent47 {
     position: absolute;
-    top: 4.50vw;
+    top: 4.5vw;
     left: 25.66vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-3xs);
-    font-size: var(--cn-regular-size);
-}
-
-.pm-100-pm-container,
-.pm-600-pm-container {
+    font-size: var(--cn-regular-size)
+    }
+.pm-100-pm-container, .pm-600-pm-container {
     position: relative;
     border-radius: var(--br-8xs);
     width: 9.33vw;
     height: 1.65vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .pm-100-pm-container {
-    background: linear-gradient(135deg, #548eff, #1463ff);
-}
-
+    background: linear-gradient(135deg, #548eff, #1463ff)
+    }
 .pm-600-pm-container {
-    background-color: var(--color-mediumseagreen);
-}
-
+    background-color: var(--color-mediumseagreen)
+    }
 .frame-parent48 {
     position: absolute;
     top: 25.66vw;
@@ -202,9 +154,8 @@
     justify-content: flex-start;
     gap: var(--gap-3xs);
     font-size: var(--cn-regular-size);
-    color: var(--white);
-}
-
+    color: var(--white)
+    }
 .line-parent1 {
     position: absolute;
     top: 9.79vw;
@@ -215,17 +166,15 @@
     width: 72.62vw;
     height: 41.27vw;
     overflow: hidden;
-    color: var(--black);
-}
-
+    color: var(--black)
+    }
 .oouinext-ltr-icon {
     position: relative;
     width: 1.06vw;
     height: 1.06vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .oouinext-ltr-parent {
     position: absolute;
     top: 5.56vw;
@@ -234,17 +183,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-base);
-}
-
+    gap: var(--gap-base)
+    }
 .frame-parent46 {
     position: relative;
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 76.59vw;
-    height: 53.17vw;
-}
-
+    height: 53.17vw
+    }
 .dashboard-interviewer2-inner {
     position: absolute;
     top: 9.13vw;
@@ -253,9 +200,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .dashboard-interviewer2 {
     position: relative;
     background-color: var(--color-ghostwhite-100);
@@ -265,5 +211,5 @@
     text-align: left;
     font-size: var(--font-size-6xl);
     color: var(--color-darkslategray-200);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
