--- a/src/pages/DreamCompanyDashboardIndivi.css
+++ b/src/pages/DreamCompanyDashboardIndivi.css
@@ -2,9 +2,8 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .dream-companies-wrapper {
     position: absolute;
     top: 1.59vw;
@@ -12,9 +11,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .vector-icon23 {
     position: absolute;
     height: 1.44%;
@@ -25,18 +23,16 @@
     left: 86.56%;
     max-width: 100%;
     overflow: hidden;
-    max-height: 100%;
-}
-
+    max-height: 100%
+    }
 .company-logo-icon15 {
     position: absolute;
     top: 3.97vw;
-    left: calc(50% - 3.90vw);
-    width: 7.80vw;
+    left: calc(50% - 3.9vw);
+    width: 7.8vw;
     height: 3.44vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .interview-ready {
     position: relative;
     font-size: var(--font-size-sm);
@@ -44,29 +40,24 @@
     line-height: 2.78vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--black);
-    text-align: left;
-}
-
-.frame-child128,
-.rectangle-wrapper24 {
+    text-align: left
+    }
+.frame-child128, .rectangle-wrapper24 {
     border-radius: var(--br-9xs);
-    height: 0.40vw;
-}
-
+    height: 0.4vw
+    }
 .frame-child128 {
     position: absolute;
     top: 0;
     left: 0;
     background-color: var(--color-mediumseagreen);
-    width: 7.34vw;
-}
-
+    width: 7.34vw
+    }
 .rectangle-wrapper24 {
     position: relative;
     background-color: var(--color-gainsboro-300);
-    width: 10.19vw;
-}
-
+    width: 10.19vw
+    }
 .interview-ready-parent {
     position: absolute;
     top: 8.47vw;
@@ -76,9 +67,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-5xs);
-}
-
+    gap: var(--gap-5xs)
+    }
 .vector-container {
     cursor: pointer;
     border: 0;
@@ -86,23 +76,20 @@
     background-color: var(--white);
     position: relative;
     border-radius: var(--br-base);
-    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.10vw 0 rgba(0, 0, 0, 0.1),
-    0 0.20vw 0#605bff;
+    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.1vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
     width: 23.02vw;
     height: 12.04vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .company-logo-icon16 {
     position: absolute;
     top: calc(50% - 2.05vw);
     left: calc(50% - 5.29vw);
     width: 10.52vw;
     height: 2.98vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .vector-parent1 {
     cursor: pointer;
     border: 0;
@@ -110,31 +97,26 @@
     background-color: var(--white);
     position: relative;
     border-radius: var(--br-base);
-    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.13vw 0 rgba(0, 0, 0, 0.1),
-    0 0.20vw 0#605bff;
+    box-shadow: -0.13vw 0 0 rgba(0, 0, 0, 0.1), 0.13vw -0.13vw 0 rgba(0, 0, 0, 0.1), 0 0.2vw 0 #605bff;
     width: 23.02vw;
     height: 12.04vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
-.company-logo-icon17,
-.company-logo-icon19 {
+    flex-shrink: 0
+    }
+.company-logo-icon17, .company-logo-icon19 {
     position: absolute;
     top: calc(50% - 2.05vw);
     left: calc(50% - 3.84vw);
     width: 7.61vw;
     height: 2.98vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .company-logo-icon19 {
     top: calc(50% - 2.18vw);
     left: calc(50% - 5.29vw);
     width: 10.58vw;
-    height: 3.17vw;
-}
-
+    height: 3.17vw
+    }
 .frame-parent158 {
     position: absolute;
     top: 6.08vw;
@@ -145,26 +127,23 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-13xl);
-}
-
+    gap: var(--gap-13xl)
+    }
 .icbaseline-plus-icon15 {
     position: relative;
     width: 1.32vw;
     height: 1.32vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .add-dream-company {
     position: relative;
     font-size: 1.05vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .icbaseline-plus-parent13 {
     cursor: pointer;
     border: 0;
@@ -179,9 +158,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: var(--gap-7xs);
-}
-
+    gap: var(--gap-7xs)
+    }
 .frame-parent157 {
     position: absolute;
     top: 9.13vw;
@@ -189,9 +167,8 @@
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 76.59vw;
-    height: 53.70vw;
-}
-
+    height: 53.7vw
+    }
 .dream-company-dashboard-indivi {
     position: relative;
     background-color: var(--color-ghostwhite-100);
@@ -201,5 +178,5 @@
     text-align: left;
     font-size: var(--font-size-9xl);
     color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
