--- a/src/pages/ResumePersonalInfo.css
+++ b/src/pages/ResumePersonalInfo.css
@@ -2,9 +2,8 @@
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .choose-your-resume-template-wrapper {
     position: absolute;
     top: 1.59vw;
@@ -12,26 +11,23 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .phdots-three {
     position: absolute;
     top: 5.67vw;
     left: 10.22vw;
     width: 0.95vw;
     height: 0.95vw;
-    overflow: hidden;
-}
-
+    overflow: hidden
+    }
 .icbaseline-plus-icon3 {
     position: relative;
     width: 2.38vw;
     height: 2.38vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .create-blank {
     position: relative;
     font-size: var(--font-size-xl);
@@ -40,9 +36,8 @@
     font-family: var(--font-avenir-lt-std);
     color: var(--icon-grey);
     text-align: left;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .icbaseline-plus-parent1 {
     position: absolute;
     top: calc(50% - 2.55vw);
@@ -50,84 +45,67 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-}
-
-.frame-child72,
-.phdots-three-parent9 {
+    justify-content: flex-start
+    }
+.frame-child72, .phdots-three-parent9 {
     position: relative;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .phdots-three-parent9 {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: #efefef;
     border-radius: 0.54vw;
-    box-shadow: -0.07vw 0 0 rgba(0, 0, 0, 0.1),
-    0.07vw -0.07vw 0 rgba(0, 0, 0, 0.1),
-    0 0.10vw 0#605bff;
-    width: 12.50vw;
-    height: 17.66vw;
-}
-
+    box-shadow: -0.07vw 0 0 rgba(0, 0, 0, 0.1), 0.07vw -0.07vw 0 rgba(0, 0, 0, 0.1), 0 0.1vw 0 #605bff;
+    width: 12.5vw;
+    height: 17.66vw
+    }
 .frame-child72 {
-    background-image: url(/public/frame1267@2x.png);
-}
-
-.frame-child72,
-.phdots-three-frame,
-.phdots-three-wrapper {
+    background-image: url(/public/frame1267@2x.png)
+    }
+.frame-child72, .phdots-three-frame, .phdots-three-wrapper {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent;
-    width: 12.50vw;
+    width: 12.5vw;
     height: 17.66vw;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
-}
-
+    background-position: top
+    }
 .phdots-three-wrapper {
     position: relative;
     overflow: hidden;
     flex-shrink: 0;
-    background-image: url(/public/frame1268.svg);
-}
-
+    background-image: url(/public/frame1268.svg)
+    }
 .phdots-three-frame {
-    background-image: url(/public/frame1269.svg);
-}
-
-.frame-child73,
-.phdots-three-frame,
-.phdots-three-wrapper1 {
+    background-image: url(/public/frame1269.svg)
+    }
+.frame-child73, .phdots-three-frame, .phdots-three-wrapper1 {
     position: relative;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .phdots-three-wrapper1 {
     cursor: pointer;
     border: 0;
     padding: 0;
     background-color: transparent;
-    width: 12.50vw;
+    width: 12.5vw;
     height: 17.66vw;
     background-image: url(/public/frame1270.svg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
-}
-
+    background-position: top
+    }
 .frame-child73 {
     width: 12.64vw;
-    height: 17.83vw;
-}
-
+    height: 17.83vw
+    }
 .frame-parent109 {
     position: absolute;
     top: 6.08vw;
@@ -138,9 +116,8 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 2.51vw;
-}
-
+    gap: 2.51vw
+    }
 .frame-parent108 {
     position: absolute;
     top: 9.13vw;
@@ -148,10 +125,9 @@
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 76.59vw;
-    height: 53.70vw;
-    overflow: hidden;
-}
-
+    height: 53.7vw;
+    overflow: hidden
+    }
 .resume-personal-info {
     position: relative;
     background-color: var(--color-ghostwhite-100);
@@ -161,5 +137,5 @@
     text-align: left;
     font-size: var(--font-size-9xl);
     color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
