--- a/src/pages/ResumePersonalInfo2.css
+++ b/src/pages/ResumePersonalInfo2.css
@@ -5,27 +5,24 @@
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 76.59vw;
-    height: 53.70vw;
-    overflow: hidden;
-}
-
+    height: 53.7vw;
+    overflow: hidden
+    }
 .image-102-icon {
     position: absolute;
     top: calc(50% - 20.17vw);
     left: calc(50% - 15.21vw);
     width: 30.42vw;
     height: 42.53vw;
-    object-fit: cover;
-}
-
+    object-fit: cover
+    }
 .lucidelayout-template-icon {
     position: relative;
     width: 1.32vw;
     height: 1.32vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .select-template {
     position: relative;
     font-size: var(--font-size-lg);
@@ -33,9 +30,8 @@
     line-height: 2.78vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--icon-grey);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .lucidelayout-template-parent {
     cursor: pointer;
     border: 0;
@@ -45,24 +41,20 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-5xs);
-}
-
+    gap: var(--gap-5xs)
+    }
 .download-now {
     position: relative;
     font-size: var(--font-size-sm);
     font-family: var(--font-avenir-lt-std);
     color: var(--white);
-    text-align: left;
-}
-
-.download-now-wrapper,
-.frame-parent110 {
+    text-align: left
+    }
+.download-now-wrapper, .frame-parent110 {
     display: flex;
     flex-direction: row;
-    align-items: center;
-}
-
+    align-items: center
+    }
 .download-now-wrapper {
     cursor: pointer;
     border: 0;
@@ -73,17 +65,15 @@
     overflow: hidden;
     flex-shrink: 0;
     justify-content: center;
-    box-sizing: border-box;
-}
-
+    box-sizing: border-box
+    }
 .frame-parent110 {
     position: absolute;
     top: 1.59vw;
     left: calc(50% - 15.28vw);
     justify-content: flex-start;
-    gap: 12.70vw;
-}
-
+    gap: 12.7vw
+    }
 .image-102-parent {
     position: absolute;
     top: 9.13vw;
@@ -91,17 +81,15 @@
     background-color: var(--color-whitesmoke-100);
     box-shadow: -0.13vw 0 0.13vw rgba(0, 0, 0, 0.05);
     width: 35.58vw;
-    height: 53.70vw;
-    overflow: hidden;
-}
-
+    height: 53.7vw;
+    overflow: hidden
+    }
 .resume {
     position: relative;
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    font-weight: bold;
-}
-
+    font-weight: bold
+    }
 .resume-wrapper {
     position: absolute;
     top: 1.59vw;
@@ -109,86 +97,75 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .wrapper {
-    border-radius: 0.20vw;
+    border-radius: 0.2vw;
     background-color: var(--color-lightcoral);
     overflow: hidden;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: var(--padding-5xs) var(--padding-3xs);
-}
-
+    padding: var(--padding-5xs) var(--padding-3xs)
+    }
 .resume-score {
     position: relative;
     font-size: var(--font-size-lg);
     letter-spacing: -0.02em;
     line-height: 2.78vw;
-    color: var(--icon-grey);
-}
-
+    color: var(--icon-grey)
+    }
 .frame-parent113 {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: 0.46vw;
-}
-
+    gap: 0.46vw
+    }
 .frame-child78 {
     position: absolute;
     top: 0;
     left: 0;
     background-color: var(--color-lightcoral);
     width: 5.36vw;
-    height: 0.40vw;
-}
-
+    height: 0.4vw
+    }
 .rectangle-wrapper11 {
     position: relative;
     background-color: var(--color-aliceblue);
     width: 37.57vw;
-    height: 0.40vw;
+    height: 0.4vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .frame-parent112 {
     width: 37.04vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-5xs);
-}
-
-.add-your-image,
-.profile-image {
+    gap: var(--gap-5xs)
+    }
+.add-your-image, .profile-image {
     position: relative;
     font-size: var(--font-size-lg);
     letter-spacing: -0.02em;
     line-height: 2.78vw;
     font-family: var(--font-avenir-lt-std);
     color: var(--black);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .add-your-image {
     color: var(--icon-grey);
-    margin-top: -0.79vw;
-}
-
+    margin-top: -0.79vw
+    }
 .profile-image-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-child79 {
     position: absolute;
     top: 0;
@@ -198,26 +175,23 @@
     border: 0.19vw solid var(--color-gray-600);
     box-sizing: border-box;
     width: 4.23vw;
-    height: 4.23vw;
-}
-
+    height: 4.23vw
+    }
 .images-5-icon {
     position: absolute;
     top: 0.59vw;
     left: calc(50% - 1.41vw);
     width: 2.82vw;
     height: 3.06vw;
-    object-fit: cover;
-}
-
+    object-fit: cover
+    }
 .ellipse-parent1 {
     position: absolute;
     top: 0;
     left: 0;
     width: 4.23vw;
-    height: 4.23vw;
-}
-
+    height: 4.23vw
+    }
 .frame-wrapper52 {
     position: relative;
     border-radius: 2.91vw;
@@ -225,9 +199,8 @@
     width: 4.23vw;
     height: 4.23vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .frame-parent116 {
     cursor: pointer;
     border: 0;
@@ -237,19 +210,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap: 4.17vw;
-}
-
+    gap: 4.17vw
+    }
 .first-name {
-    position: relative;
-}
-
-.first-name-parent,
-.frame-child80 {
+    position: relative
+    }
+.first-name-parent, .frame-child80 {
     display: flex;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-child80 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
@@ -260,30 +229,23 @@
     width: 17.86vw;
     flex-direction: row;
     align-items: center;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .first-name-parent {
     flex-direction: column;
     align-items: flex-start;
-    gap: var(--gap-xs);
-}
-
-.frame-child82,
-.frame-child83,
-.frame-parent117 {
+    gap: var(--gap-xs)
+    }
+.frame-child82, .frame-child83, .frame-parent117 {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent117 {
     align-items: flex-start;
-    gap: var(--gap-xl);
-}
-
-.frame-child82,
-.frame-child83 {
+    gap: var(--gap-xl)
+    }
+.frame-child82, .frame-child83 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
     font-size: var(--font-size-xl);
@@ -292,39 +254,32 @@
     box-sizing: border-box;
     width: 37.04vw;
     align-items: center;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .frame-child83 {
-    width: 36.97vw;
-}
-
-.frame-parent115,
-.personal-details-parent {
+    width: 36.97vw
+    }
+.frame-parent115, .personal-details-parent {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent115 {
     gap: var(--gap-17xl);
-    font-size: var(--font-size-lg);
-}
-
+    font-size: var(--font-size-lg)
+    }
 .personal-details-parent {
-    gap: var(--gap-base);
-}
-
+    gap: var(--gap-base)
+    }
 .a-short-description {
     position: relative;
     font-size: var(--font-size-lg);
     letter-spacing: -0.02em;
     line-height: 2.78vw;
     color: var(--icon-grey);
-    margin-top: -0.53vw;
-}
-
+    margin-top: -0.53vw
+    }
 .frame-child84 {
     border: 0;
     background-color: var(--color-aliceblue);
@@ -335,16 +290,13 @@
     width: 36.97vw;
     height: 13.36vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
-.frame-child85,
-.frame-parent121 {
+    flex-shrink: 0
+    }
+.frame-child85, .frame-parent121 {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-child85 {
     border: 0.07vw solid var(--color-gainsboro-400);
     font-family: var(--font-avenir-lt-std);
@@ -354,20 +306,16 @@
     box-sizing: border-box;
     width: 18.39vw;
     align-items: center;
-    padding: var(--padding-base) var(--padding-5xl);
-}
-
+    padding: var(--padding-base) var(--padding-5xl)
+    }
 .frame-parent121 {
     align-items: flex-start;
-    gap: var(--gap-xs);
-}
-
-.add-education,
-.frame-child89 {
+    gap: var(--gap-xs)
+    }
+.add-education, .frame-child89 {
     position: relative;
-    font-family: var(--font-avenir-lt-std);
-}
-
+    font-family: var(--font-avenir-lt-std)
+    }
 .frame-child89 {
     border: 0.07vw solid var(--color-whitesmoke-100);
     background-color: var(--color-aliceblue);
@@ -378,15 +326,13 @@
     width: 37.57vw;
     height: 13.36vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
+    flex-shrink: 0
+    }
 .add-education {
     font-size: 1.05vw;
     color: var(--purple);
-    text-align: left;
-}
-
+    text-align: left
+    }
 .icbaseline-plus-parent2 {
     cursor: pointer;
     border: 0;
@@ -400,95 +346,76 @@
     align-items: center;
     justify-content: flex-start;
     box-sizing: border-box;
-    gap: var(--gap-7xs);
-}
-
-.frame-parent123,
-.frame-wrapper53 {
+    gap: var(--gap-7xs)
+    }
+.frame-parent123, .frame-wrapper53 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-parent123 {
-    gap: var(--gap-5xs);
-}
-
+    gap: var(--gap-5xs)
+    }
 .frame-wrapper53 {
-    font-size: var(--font-size-lg);
-}
-
+    font-size: var(--font-size-lg)
+    }
 .icbaseline-plus-icon7 {
     position: relative;
     width: 1.06vw;
     height: 1.06vw;
     overflow: hidden;
-    flex-shrink: 0;
-}
-
-.icbaseline-plus-parent5,
-.teamwork-skill-wrapper {
+    flex-shrink: 0
+    }
+.icbaseline-plus-parent5, .teamwork-skill-wrapper {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    justify-content: center;
-}
-
+    justify-content: center
+    }
 .icbaseline-plus-parent5 {
     align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-9xs);
-}
-
-.frame-parent134,
-.frame-wrapper55 {
+    gap: var(--gap-9xs)
+    }
+.frame-parent134, .frame-wrapper55 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-start;
-}
-
+    justify-content: flex-start
+    }
 .frame-wrapper55 {
     border-radius: var(--br-5xs);
     background-color: var(--color-aliceblue);
-    padding: var(--padding-5xs) var(--padding-xs);
-}
-
+    padding: var(--padding-5xs) var(--padding-xs)
+    }
 .frame-parent134 {
     background-color: var(--white);
     width: 37.17vw;
     flex-wrap: wrap;
-    gap: var(--gap-xs);
-}
-
-.frame-parent111,
-.frame-parent114,
-.frame-wrapper54 {
+    gap: var(--gap-xs)
+    }
+.frame-parent111, .frame-parent114, .frame-wrapper54 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     font-size: var(--font-size-base);
-    color: var(--color-darkgray-200);
-}
-
-.frame-parent111,
-.frame-parent114 {
+    color: var(--color-darkgray-200)
+    }
+.frame-parent111, .frame-parent114 {
     gap: var(--gap-15xl);
     font-size: var(--font-size-5xl);
-    color: var(--black);
-}
-
+    color: var(--black)
+    }
 .frame-parent111 {
     position: absolute;
     top: 5.42vw;
     left: 1.59vw;
     gap: var(--gap-4xl);
     font-size: var(--font-size-base);
-    color: var(--white);
-}
-
+    color: var(--white)
+    }
 .resumeinfocompo {
     position: absolute;
     top: 9.13vw;
@@ -496,9 +423,8 @@
     border-radius: var(--br-base);
     background-color: var(--white);
     width: 40.67vw;
-    height: 191.47vw;
-}
-
+    height: 191.47vw
+    }
 .resume-personal-info2 {
     position: relative;
     background-color: var(--color-ghostwhite-100);
@@ -508,5 +434,5 @@
     text-align: left;
     font-size: var(--font-size-9xl);
     color: var(--black);
-    font-family: var(--font-avenir-lt-std);
-}
+    font-family: var(--font-avenir-lt-std)
+    }
